Check order total

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,3 +13,4 @@ en:
     paypal_refund_type: Refund Type
     paypal_refunded_at: Refunded At
     paypal_failed_payment: Unfortunately your payment was not approved by PayPal. Please check your data or try another payment method.
+    paypal_wrong_price: The price items in the cart were updated. Please, refresh the page and try again.
