--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,5 +12,6 @@ en:
     paypal_refund_id: Refund ID
     paypal_refund_type: Refund Type
     paypal_refunded_at: Refunded At
+    paypal_failed_payment_id: Unfortunately an error occurred while trying to create the payment. Please try again or choose another payment method.
     paypal_failed_payment: Unfortunately your payment was not approved by PayPal. Please check your data or try another payment method.
     paypal_wrong_price: The price items in the cart were updated. Please, refresh the page and try again.
